devtools/default.css
@import url('https://rsms.me/inter/inter.css');
/*
colour palette:
FFFFFF
2F2F2F
000000
212121
*/

/*background: linear-gradient(90deg, #2A2A2A (10px), transparent 1%) center, linear-gradient(#2A2A2A (10px), transparent 1%) center, #4F4F4F;*/
/*background-size: 11px 11px;*/
*,
*:before,
*:after {
	box-sizing: border-box;
}
.clearfix:after {
	content: "";
	display: table;
	clear: both;
	display: block;
	position: fixed;
}
.conversionSummary {
	position: fixed;
	top: 0;
	left: 0;
	z-index: 999;
	width: 100%;
	height: 23px;
  }
body {
	margin: 0;
	background-image: url(../icons/DarkBg.jpg);
	background-repeat: repeat;
	font-size: 20px;
	color: #FFFFFF;
	font-family: 'Inter', 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
}
h1 {
	margin: 12px 0px;
	text-align: center;
	font-size: 26px;
	font-weight: 400;
	color: #FFFFFF;
}
h3 {
	font-size: 20px;
	font-weight: 600;
	color: #FFFFFF;
	text-align: center;
	margin: 10px;
}
h4 {
	font-size: 17px;

	color: #FFFFFF;
	text-align: center;
	margin: 10px;
}
.container {
	margin-top: 125px;
}
[class*="row-"] {
	margin-bottom: 20px;
}
[class*="row-"]:last-child {
	margin-bottom: 0;
}
[class*="col-"] {
	margin-top: 0px;
	margin-right: 0px;
	float: left;
	border-width: 1px 1px 2px 1px;
	border-style: solid;
	border-color: #212121;
	padding: 12px 12px;
	display: table-cell;
	vertical-align: middle;
	background-color: #2F2F2F;
}
[class*="col-"]:last-child {
	margin-right: 0;
}

.col-1-5-box {
	width: 20%;
	min-height: 125px;
	max-height: 125px;
	overflow: hidden;
	padding: 5px;
}

.col-1-4-box {
	width: 25%;
	min-height: 125px;
	max-height: 125px;
	overflow: hidden;
	padding: 5px;
}
.col-1-2-box {
	width: 50%;
	min-height: 125px;
	max-height: 125px;
	overflow: hidden;
	padding: 5px;
}
.col-full-box {
	width: 100%;
	text-align: left;
	display: block;
	float: none;
	overflow: auto;
	border: none;
	background-image: url(../icons/DarkBg.jpg);
	background-repeat: repeat;
}
.col-full-box-nonImage {
	margin-top: auto;
	width: 100%;
	text-align: left;
	display: block;
	float: relative;
	overflow: auto;
}
.col-image-box {
	width: 100%;
	text-align: center;
	display: block;
	float: none;
	padding: 15px;
}
[class*='detailed-results'] {
	margin: 0px auto;
	color: #FFFFFF;
	text-align: left;
	border-spacing: 0 2px;
}
[class*='detailed-results'] th {
	background-color: #3D3D3D;
	font-size: 12px;
	font-weight: normal;
	padding: 8px 15px;
}
[class*='detailed-results'] td {
	padding: 8px 15px;
	background-color: #333333;
}
[class*='detailed-results'] td.UrlData {
	text-align: left;
	white-space: nowrap;
	text-overflow:ellipsis;
	overflow: hidden;
	text-align: left;
	max-width:1200px;
}
[class='detailed-results-a2'] th {
	padding-left: 100px;
	padding-right: 100px;
}
#videoAdvanced td.UrlData,
#imageAdvanced td.UrlData{
	max-width: 400px;
}
.error {
	color: red;
}
.warning {
	color: #FFDE00;
}
.success {
	color: #24C325;
}
.imageCompareTable {
	margin: 0px auto;
	margin-bottom:20px;
	margin-top:10px;
}
.imageCompareTable th {
	text-align: center;
	padding-left: 20px;
	padding-right: 20px;
	text-decoration: underline;
	min-width: 300px;
}
#compareUrlTitle {
	font-size: 14px;
}
.urlInfo:hover {
	background-color: black;
}
.toggleBoxMessage {
	margin-top:10px;
	margin-bottom:20px;
	color: #eee9e9;
}
.imageCompareViewer {
	margin-top: 20px;
	margin-bottom: 20px;
}
a:link {
	color: #FFFFFF;
}
a:hover {
	color: white;
}
a:visited {
	color: #FFFFFF;
}
.piezConfigMessageHeader {
	font-size: 25px;
	color: yellow;
	text-align: center;
	width: 50%;
	margin: auto;
}
.piezConfigMessageSteps ol {
	list-style-position: inside;
	font-size: 15px;
	color: yellow;
	text-align: left;
	width: 30%;
	margin: auto;
}
.selectedImage {
	border: solid 4px green;
	color: green;
	padding:10px;
}
.unselectedImage {
	color: #FFFFFF;
	border: solid 4px #2F2F2F;
	padding:10px;
}
.selectedImage:hover {
	cursor: pointer;
	color: white;
	background-color: black;
}
.unselectedImage:hover {
	cursor: pointer;
	color: white;
	background-color: black;
}
.toggleOriginalImage 	{
	position: absolute;
	border: 1px solid #999797;
}
.toggleTransformedImage {
	position: relative;
	border: 1px solid #999797;
}
.imageToggleBox {
	margin-bottom: 20px;
}
.imageToggleBox:hover {
	cursor: pointer;
}
#videoToggleBox {
	margin-bottom: 20px;
}
#videoToggle {
	max-height: 400px;
	max-width: 100%;
}
#videoToggleControls {
	padding-bottom: 15px;
}
.ajaxLoader {
	width: 60px;
	height: 60px;
	border: 1px solid #FFFFFF;
	border-right-color: transparent;
	border-radius: 50%;
	box-shadow: 0 0 25px 2px #000000;
	margin-left: auto;
	margin-right: auto;
	margin-top: 40px;
	margin-bottom: 40px;
	-webkit-animation-duration: 1.0s;
	-webkit-animation-iteration-count:infinite;
	-webkit-animation-name:loader;
	-webkit-animation-timing-function: linear;
}
@-webkit-keyframes loader {
	0%{ -webkit-transform:  rotate(0deg); }
	100%{ -webkit-transform:  rotate(360deg); }
}
.row {
	display: flex;
	flex-flow: row wrap;
	margin: 0 -10px;
	margin-bottom: 0px;
}
.rowFixTop {
	position: fixed;
	top: 0;
	left: 0;
	z-index: 999;
	width: 100%;
	height: 110px;
}
.details {
	overflow: visible;
}
td {
	padding-bottom: 2px;
	padding-left: 3px;
	padding-right: 3px;
	white-space:nowrap;
}

.subHeaderInfo {
	text-align: center;
	margin: 20px;
}

@media all and ( max-width: 1920px ) {
	.detailed-results td.urlData {
		max-width:1000px;
	}
}

@media all and ( max-width: 1600px ) {
	h1 {
		 margin-bottom: 12px;
		 text-align: center;
		 font-size: 20px;
		 font-weight: 400;
		 color: #FFFFFF;
		 min-height: 30px;
	}
	h3 {
		 font-size: 17px;
		 font-weight: 600;
		 color: #FFFFFF;
		 text-align: center;
		 margin: 10px;
	}
	h4 {
		font-size: 14px;
		color: #FFFFFF;
		text-align: center;
		margin: 10px;
    }
	.im-box h4 {
		text-align: left;
		font-size: 28px;
	}
	table {
		font-size: 15px;
	}
	[class*="col-"] {
		margin-right: 0px;
		float: left;
		padding: 20px 12px 0;
		display: table-cell;
		vertical-align: middle;
		background-color: #2F2F2F;
	}
	.container {
		margin-top: 210px;
	}
	.im-box .container span {
		float: left;
	}
	.im-box .img-align {
		margin: 10px;
	}
	.im-box .img-align img {
		float: left;
		text-align: left;
		vertical-align: middle;
	}
	.im-box .img-align span {
		text-align: left;
		vertical-align: middle;
		font-size: 28px;
		margin: 10px;
	}
	.im-box h4:first-child {
		font-weight: normal;
	}
	.im-box #col-2-info,
	.im-box #col-3-info {
		font-size: 46px;
		padding-top: 16px;
	}
	.col-1-4-box.im-box {
		padding: 10px 10px;
		min-height: 210px;
		max-height: 210px;
	}
	.col-1-2-box.im-box {
		padding: 10px 10px;
		min-height: 210px;
		max-height: 210px;
		background-color: #323334;
	}
	.col-1-2-box.im-box #col-1-info {
		font-size: 60px;
	}
	.detailed-results td.urlData {
		max-width:700px;
	}
	.table-title {
		background-color: #3D3D3D;
		padding: 15px;
		margin: 5px 30px 0;
		text-align: left;
	}
	.table-title img {
		vertical-align: middle;
		margin-right: 10px;
	}
	.detailsTable {
		margin: 0 30px;
	}
}

@media all and ( max-width: 1200px ) {
	h1 {
		 text-align: center;
		 font-size: 16px;
		 font-weight: 400;
		 color: #FFFFFF;
		 min-height: 33px;
	}
	[class*="col-"] {
		padding: 15px 10px;
		vertical-align: middle;
	}
	h3 {
		 font-size: 15px;
		 font-weight: 600;
		 color: #FFFFFF;
		 text-align: center;
		 margin: 10px;
	}
	h4 {
		font-size: 16px;
		color: #FFFFFF;
		text-align: center;
		margin: 10px;
    }
	table {
		font-size: 12px;
	}
	.container {
		margin-top: 120px;
	}
	.col-1-4-box {
		padding: 10px 5px;
		min-height: 120px;
		max-height: 120px;
	}
	.col-1-2-box {
		padding: 10px 10px;
		min-height: 120px;
		max-height: 120px;
	}
	.col-4-box {
		min-height: 150px;
		overflow: scroll;
	}
	.detailed-results td.urlData {
	    max-width:300px;
	}
}

@media all and ( max-width: 720px ) {
	h1 {
		 margin-bottom: 17px;
	}
	h4 {
		font-size: 15px;
	}
	[class*="col-"] {
		margin-right: 0px;
		float: left;
		border: 1px solid #212121;
		padding: 50px 25px;
		display: table-cell;
		vertical-align: middle;
		background-color: #2F2F2F;
	}
	.container {
		margin-top: 150px;
	}
	.col-1-4-box {
		padding: 5px;
		min-height: 150px;
		max-height: 150px;
	}
	.col-1-2-box {
		padding: 5px;
		min-height: 150px;
		max-height: 150px;
	}
	.col-4-box {
		min-height: 150px;
		overflow: scroll;
	}
	.detailed-results td.urlData {
	    max-width:200px;
	}
}

/* Scroll on images and videos*/

#table-wrapper1 {
	position:relative;
}
#table-scroll {
	height:50%;
	overflow:auto;  
}
#table-wrapper2 {
	position:relative;
	border: 2px black;
	padding: 5px red;
}
#table-wrapper1 table {
	width:100%;
}
#table-wrapper2 table {
	width:100%;
}
/* #table-wrapper table * {
	background:yellow;
	color:black;
} */
#table-wrapper1 table thead th .text {
	position:absolute;   
	top:-20px;
	z-index:2;
	height:20px;
	width:35%;
	border:1px solid red;
}
#table-wrapper2 table thead th .text {
	position:absolute;   
	top:-20px;
	z-index:2;
	height:20px;
	width:35%;
	border:1px solid red;
}
.display-none {
    display: none;
}
#block_container {
    text-align:center;
}
#close {
    display:inline-block;
    padding:2px 5px;
    background:#ccc;
}

